# ds

./: .gitignore  README.md  ds.cabal  ds.yaml  stack.yaml
app/: Main.hs
src/: DS.hs
src/DS/: Types.hs
