name:               ds
version:            0.0.0.0
synopsis:           Helper for to setup test data on web app development.
description:        Please see README.md
homepage:           http://github.com/siphilia/ds#readme
license:            BSD3
license-file:       LICENSE
author:             Siphilia
maintainer:         Siphilia <siphilia.rn@gmail.com>
copyright:          (c) 2016 Siphilia
category:           Web
build-type:         Simple
cabal-version:      >= 1.10
-- extra-source-files:

library
  hs-source-dirs:     src
  exposed-modules:    DS
                      DS.Types
  build-depends:      base      >= 4.7 && < 5
                    , process   >= 1.2
                    , yaml      >= 0.5
                    , directory
  default-language:   Haskell2010

executable ds
  hs-source-dirs:     app
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , ds
  default-language:   Haskell2010

test-suite ds-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , ds
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/siphilia/ds
